--- a/week8/index.html
+++ b/week8/index.html
@@ -280,7 +280,7 @@
 				</div>
 				<div class="colophon">
 					<div class="container">
-						<p class="copy">Copyright 2014 Company Name, Designed by Themezy, All right reserved.</p>
+						<p class="copy">Copyright 2014 Travel Agency NZ, Designed by Themezy, All right reserved.</p>
 					</div>
 				</div>
 			</footer> <!-- .site-footer -->
