--- a/week8/contact.html
+++ b/week8/contact.html
@@ -29,7 +29,7 @@
 					<div class="header-content">
 						<div class="branding">
 							<img src="images/logo.png" alt="Company Name" class="logo">
-							<h1 class="site-title"><a href="index.html">Company Name</a></h1>
+							<h1 class="site-title"><a href="index.html">Travel Agency NZ</a></h1>
 							<small class="site-description">Tagline goes here</small>
 						</div>
 						
@@ -62,7 +62,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-4 wow fadeInLeft">
-								<h4>Company Name</h4>
+								<h4>Travel Agency NZ</h4>
 								<ul class="list-fa">
 									<li><i class="fa fa-map-marker"></i> 983 Avenue Street, New York</li>
 									<li><i class="fa fa-phone"></i> +03934343453</li>
@@ -143,7 +143,7 @@
 					<div class="container">
 						<div class="branding pull-left">
 							<img src="images/logo-footer.png" alt="Company Name" class="logo">
-							<h1 class="site-title"><a href="index.html">Company Name</a></h1>
+							<h1 class="site-title"><a href="index.html">Travel Agency NZ</a></h1>
 							<small class="site-description">Tagline goes here</small>
 						</div>
 
@@ -156,7 +156,7 @@
 				</div>
 				<div class="colophon">
 					<div class="container">
-						<p class="copy">Copyright 2014 Company Name, Designed by Themezy, All right reserved.</p>
+						<p class="copy">Copyright 2014 Travel Agency NZ, Designed by Themezy, All right reserved.</p>
 					</div>
 				</div>
 			</footer> <!-- .site-footer -->
