--- a/week8/our-offer.html
+++ b/week8/our-offer.html
@@ -29,7 +29,7 @@
 					<div class="header-content">
 						<div class="branding">
 							<img src="images/logo.png" alt="Company Name" class="logo">
-							<h1 class="site-title"><a href="index.html">Company Name</a></h1>
+							<h1 class="site-title"><a href="index.html">Travel Agency NZ</a></h1>
 							<small class="site-description">Tagline goes here</small>
 						</div>
 						
@@ -302,7 +302,7 @@
 					<div class="container">
 						<div class="branding pull-left">
 							<img src="images/logo-footer.png" alt="Company Name" class="logo">
-							<h1 class="site-title"><a href="index.html">Company Name</a></h1>
+							<h1 class="site-title"><a href="index.html">Travel Agency NZ</a></h1>
 							<small class="site-description">Tagline goes here</small>
 						</div>
 
@@ -315,7 +315,7 @@
 				</div>
 				<div class="colophon">
 					<div class="container">
-						<p class="copy">Copyright 2014 Company Name, Designed by Themezy, All right reserved.</p>
+						<p class="copy">Copyright 2014 Travel Agency NZ, Designed by Themezy, All right reserved.</p>
 					</div>
 				</div>
 			</footer> <!-- .site-footer -->
